testdata/baselines/reference/submodule/conformance/YieldExpression15_es6.errors.txt
YieldExpression15_es6.ts(2,6): error TS1163: A 'yield' expression is only allowed in a generator body.
YieldExpression15_es6.ts(2,12): error TS2304: Cannot find name 'foo'.


==== YieldExpression15_es6.ts (2 errors) ====
    var v = () => {
         yield foo
         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
               ~~~
!!! error TS2304: Cannot find name 'foo'.
      }